# wc-arena

./: .env.example  .gitignore  AGENTS.md  Card_list.txt  PREDICT_2026_COMPLETION_PLAN.md  README.md  index.html  metadata.json  package-lock.json  package.json  render.yaml  replace.cjs  vercel.json  vite.config.ts  wc2026_squads_with_guardian_images.json
agent-service/: .env.example  README.md  pyproject.toml
agent-service/app/: agent_account.py  auth.py  main.py  memory.py  models.py  settings.py
agent-service/app/api/: routes.py
agent-service/app/graph/: nodes.py  state.py  workflow.py
agent-service/app/match_lab/: actions.py  models.py  resolver.py  rules.py  service.py
agent-service/app/picks/: picker.py  runner.py
agent-service/app/tools/: football_tools.py  prediction_tools.py  supabase_tools.py
agent-service/docs/: agent-graph.mmd
agent-service/scripts/: export_graph_diagram.py
agent-service/tests/: test_agent_account.py  test_cron_auth.py  test_football_context.py  test_intent_router.py  test_llm_settings.py  test_match_lab.py  test_matchup_resolution.py  test_memory.py  test_picker.py  test_prediction_tools.py  test_routes.py  test_runner.py  test_safety_review.py  test_user_supabase_client.py  test_workflow.py
docs/: picks-attached-card-design-system.md  pve-pvp-agent-harness.md
public/: site.webmanifest
scripts/: seed-wc2026-players.ts  sync-espn-worldcup.ts  verify-league-settlement-contract.ts  verify-player-database-seed.ts  verify-smart-scoring-bonuses.ts  verify-statistics-page-phase1.ts  verify-statistics-phase2.ts  (+1 more)
src/: App.tsx  (+16 more)
(+224 files in other folders)
